reign_derive/tests/ui/compile_fail/model_deleteable_tag.stderr
error[E0599]: no method named `drop` found for struct `UserName` in the current scope
  --> $DIR/model_deleteable_tag.rs:30:10
   |
14 | #[derive(Debug, Model)]
   |                 ----- method `drop` not found for this
...
30 |     user.drop().await.unwrap();
   |          ^^^^ method not found in `UserName`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following traits define an item `drop`, perhaps you need to implement one of them:
           candidate #1: `Drop`
           candidate #2: `UnsafeFutureObj`
           candidate #3: `pin_project::__private::PinnedDrop`
